# rust-notes

./: .editorconfig  .gitignore  README.md
docs/: aws.md  data-types.md  rustlings.md  tools.md
examples/: fibonacci-recursion.rs  fibonacci-space-optimized.rs  fibonacci-vector.rs
examples/grrs/: Cargo.toml  README.md
examples/grrs/src/: main.rs
examples/web-server/: Cargo.toml
examples/web-server/assets/: 404.html
examples/web-server/src/: lib.rs
