[package]
name = "grrs"
version = "0.1.0"
authors = ["minchao <minchao.220@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.14"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.4"
